# buildaspider

./: .gitignore  LICENSE  README.md  README.rst  crawl  maze  notes.md  pyproject.toml  setup.py
buildaspider/: __init__.py  newsess.py  spider.py  spiderconfig.py
buildaspider.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: BFS.md  BFS.rst  conf.py  index.rst  notes.md
docs/_build/doctrees/: BFS.doctree  environment.pickle  index.doctree
docs/_build/doctrees/src/: BFS.doctree  singlepage.doctree
docs/_build/html/: .buildinfo  BFS.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/src/: BFS.html  singlepage.html
docs/src/: BFS.rst  singlepage.rst
examples/: cfg.ini  myspider.py
tests/: BASIC.py  manual.py  test_basic.py  test_basic_config.py
tests/test_config/: basic-no-log_dir.ini  basic.ini  basic2.ini  jd-github-pages.ini  nonexistentlogdirectory.ini
